--- a/src/popup.html
+++ b/src/popup.html
@@ -10,13 +10,14 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.19/dist/full.min.css" rel="stylesheet" type="text/css" />
   <style>
     body {
-      width: 380px;
-      min-height: 500px;
+      width: 384px;
+      min-height: auto;
       max-height: 600px;
       overflow-y: auto;
     }
     .break-row {
       transition: all 0.3s ease;
+      margin-bottom: 0.5rem;
     }
     .break-row:hover {
       background-color: rgba(0, 0, 0, 0.02);
@@ -31,7 +32,7 @@
     }
   </style>
 </head>
-<body class="bg-base-100">
+<body class="bg-base-100 w-96 h-auto">
   <!-- Header -->
   <header class="sticky top-0 z-50 bg-base-100 border-b border-base-300 p-4">
     <div class="flex items-center gap-3">
@@ -48,7 +49,7 @@
   <!-- Main Content -->
   <main class="p-4">
     <!-- Break Types List -->
-    <div id="breaks-list" class="space-y-2">
+    <div id="breaks-list" class="space-y-2 py-2">
       <!-- Breaks will be dynamically inserted here -->
     </div>
   </main>
@@ -57,7 +58,7 @@
   <footer class="border-t border-base-300 p-4 bg-base-200">
     <!-- Master Interval Override -->
     <div class="mb-4">
-      <label class="label">
+      <label class="label py-1">
         <span class="label-text text-xs font-semibold">Master Override (minutes)</span>
       </label>
       <div class="flex gap-2">
@@ -75,16 +76,16 @@
 
     <!-- Global Controls -->
     <div class="grid grid-cols-3 gap-2">
-      <button id="reset-all" class="btn btn-sm btn-outline">
-        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
+      <button id="reset-all" class="btn btn-xs btn-outline">
+        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path></svg>
         Reset All
       </button>
-      <button id="snooze-all" class="btn btn-sm btn-outline">
-        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+      <button id="snooze-all" class="btn btn-xs btn-outline">
+        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
         Snooze All
       </button>
-      <button id="pause-all" class="btn btn-sm btn-outline">
-        <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+      <button id="pause-all" class="btn btn-xs btn-outline">
+        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
         Pause All
       </button>
     </div>
@@ -92,7 +93,7 @@
     <!-- Privacy Notice -->
     <div class="mt-4 text-center">
       <p class="text-xs text-base-content/50 flex items-center justify-center gap-1">
-        <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg>
+        <svg class="w-3 h-3 inline-block" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path></svg>
         No data leaves your device
       </p>
     </div>
