feat: 2-column grid layout and persistent notification lifecycle
- Changed break list to 2-column grid layout (grid-cols-2)
- Removed Active/Disabled text badges - toggle visual state only
- Added 'waiting' state when notification is shown (timer doesn't auto-restart)
- Timer only resumes after user clicks Done, Snooze, or closes notification
- Added 'Due!' status display in red text when break is waiting
- Added notification close handler (onClosed) to handle dismissal
- Updated restoreAlarms to handle waiting state on browser restart
- Added waitingSince field to track notification timing

--- a/src/popup.html
+++ b/src/popup.html
@@ -52,8 +52,8 @@
 
   <!-- Main Content -->
   <main class="p-4 pb-2">
-    <!-- Break Types List -->
-    <div id="breaks-list" class="space-y-0">
+    <!-- Break Types Grid (2 columns) -->
+    <div id="breaks-list" class="grid grid-cols-2 gap-3">
       <!-- Breaks will be dynamically inserted here -->
     </div>
   </main>
