--- a/src/popup.html
+++ b/src/popup.html
@@ -34,6 +34,48 @@
       bottom: 0;
       background: linear-gradient(to top, hsl(var(--b1)), hsl(var(--b1)) 90%, transparent);
     }
+    /* Custom Toggle Switch */
+    .switch {
+      display: inline-block;
+      height: 24px;
+      position: relative;
+      width: 44px;
+    }
+    .switch input {
+      display: none;
+    }
+    .slider {
+      background-color: #ccc;
+      bottom: 0;
+      cursor: pointer;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
+      transition: .3s;
+    }
+    .slider:before {
+      background-color: #fff;
+      bottom: 3px;
+      content: "";
+      height: 18px;
+      left: 3px;
+      position: absolute;
+      transition: .3s;
+      width: 18px;
+    }
+    input:checked + .slider {
+      background-color: #66bb6a;
+    }
+    input:checked + .slider:before {
+      transform: translateX(20px);
+    }
+    .slider.round {
+      border-radius: 24px;
+    }
+    .slider.round:before {
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body class="bg-base-100">
