fix: unify global footer button styling with consistent icons and layout
- Updated button classes: btn-sm, btn-ghost, btn-outline for consistent secondary styling
- Added flexbox centering: flex items-center justify-center gap-1.5
- Increased padding: px-3 py-2 with fixed height h-10
- Standardized icons: w-4 h-4 (16px) with flex-shrink-0
- Removed individual margins, using gap for consistent spacing
- Shortened button labels: 'Reset', 'Snooze', 'Pause' (fit better in grid)
- Added text-xs font-medium for label styling
- Maintained 3-column grid layout with gap-2 spacing

--- a/src/popup.html
+++ b/src/popup.html
@@ -125,23 +125,23 @@
 
     <!-- Global Controls -->
     <div class="grid grid-cols-3 gap-2 mb-3">
-      <button id="reset-all" class="btn btn-xs btn-outline bg-white">
-        <svg class="w-3.5 h-3.5 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <button id="reset-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
+        <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
         </svg>
-        Reset All
+        <span class="text-xs font-medium">Reset</span>
       </button>
-      <button id="snooze-all" class="btn btn-xs btn-outline bg-white">
-        <svg class="w-3.5 h-3.5 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <button id="snooze-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
+        <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
-        Snooze All
+        <span class="text-xs font-medium">Snooze</span>
       </button>
-      <button id="pause-all" class="btn btn-xs btn-outline bg-white">
-        <svg class="w-3.5 h-3.5 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <button id="pause-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
+        <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
-        Pause All
+        <span class="text-xs font-medium">Pause</span>
       </button>
     </div>
 
