fix: remove black gradient background from footer
- Changed sticky-footer from gradient to solid background
- Using hsl(var(--b1) / 1) for proper theme color
- Added subtle border-top for visual separation
- Footer now matches the rest of the light theme

--- a/src/popup.html
+++ b/src/popup.html
@@ -32,7 +32,8 @@
     .sticky-footer {
       position: sticky;
       bottom: 0;
-      background: linear-gradient(to top, hsl(var(--b1)), hsl(var(--b1)) 90%, transparent);
+      background-color: hsl(var(--b1) / 1);
+      border-top: 1px solid hsl(var(--b3) / 0.5);
     }
     /* Custom Toggle Switch */
     .switch {
