--- a/src/popup.html
+++ b/src/popup.html
@@ -29,11 +29,9 @@
       max-height: 200px;
       opacity: 1;
     }
-    .sticky-footer {
-      position: sticky;
-      bottom: 0;
-      background-color: hsl(var(--b1) / 1);
-      border-top: 1px solid hsl(var(--b3) / 0.5);
+    .page-footer {
+      background-color: #ffffff;
+      border-top: 1px solid #e5e7eb;
     }
     /* Custom Toggle Switch */
     .switch {
@@ -101,8 +99,8 @@
     </div>
   </main>
 
-  <!-- Sticky Footer -->
-  <footer class="sticky-footer p-4 pt-6">
+  <!-- Footer -->
+  <footer class="page-footer p-4 pt-6">
     <!-- Master Override Section -->
     <div class="card bg-base-100 shadow-sm border border-base-200 mb-3">
       <div class="card-body p-3">
@@ -125,7 +123,7 @@
     </div>
 
     <!-- Global Controls -->
-    <div class="grid grid-cols-3 gap-2 mb-3">
+    <div class="grid grid-cols-3 gap-2 mt-3 mb-3">
       <button id="reset-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
         <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
