--- a/src/popup.html
+++ b/src/popup.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="emerald">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Healthy Breaks</title>
-  <!-- Tailwind CSS + DaisyUI (local for CSP compliance) -->
   <link href="tailwind.min.css" rel="stylesheet" type="text/css" />
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+    
     body {
-      width: 360px;
+      font-family: 'Inter', sans-serif;
+      width: 400px;
       min-height: 500px;
       max-height: 600px;
       overflow-y: auto;
+      background-color: #F8F8F8;
     }
     .break-card {
       transition: all 0.2s ease;
@@ -26,134 +29,119 @@
       opacity: 0;
     }
     .config-panel.open {
-      max-height: 200px;
+      max-height: 250px;
       opacity: 1;
     }
-    .page-footer {
-      background-color: #ffffff;
-      border-top: 1px solid #e5e7eb;
-    }
-    /* Custom Toggle Switch */
     .switch {
-      display: inline-block;
-      height: 24px;
       position: relative;
-      width: 44px;
+      display: inline-block;
+      width: 56px;
+      height: 32px;
     }
     .switch input {
-      display: none;
+      opacity: 0;
+      width: 0;
+      height: 0;
     }
-    .slider {
-      background-color: #ccc;
-      bottom: 0;
+    .toggle-slider {
+      position: absolute;
       cursor: pointer;
-      left: 0;
-      position: absolute;
-      right: 0;
       top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #E5E7EB;
       transition: .3s;
+      border-radius: 32px;
     }
-    .slider:before {
-      background-color: #fff;
-      bottom: 3px;
-      content: "";
-      height: 18px;
-      left: 3px;
+    .toggle-slider:before {
       position: absolute;
+      content: "";
+      height: 24px;
+      width: 24px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
       transition: .3s;
-      width: 18px;
-    }
-    input:checked + .slider {
-      background-color: #66bb6a;
-    }
-    input:checked + .slider:before {
-      transform: translateX(20px);
-    }
-    .slider.round {
-      border-radius: 24px;
-    }
-    .slider.round:before {
       border-radius: 50%;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+    input:checked + .toggle-slider {
+      background-color: #22C55E;
+    }
+    input:checked + .toggle-slider:before {
+      transform: translateX(24px);
     }
   </style>
 </head>
-<body class="bg-base-100">
-  <!-- Header -->
-  <header class="sticky top-0 z-50 bg-base-100 border-b border-base-200 p-4">
-    <div class="flex items-center gap-3">
-      <div class="w-10 h-10 bg-primary rounded-xl flex items-center justify-center text-2xl shadow-sm">
-        🍃
+<body class="text-gray-800">
+  <main class="w-full max-w-[550px] mx-auto py-6 px-4">
+    
+    <div class="mb-6">
+      <div class="flex items-center gap-4 mb-5">
+        <div class="w-14 h-14 bg-[#22C55E] rounded-xl flex items-center justify-center shadow-sm">
+          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M7 11v 8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3"></path>
+          </svg>
+        </div>
+        <div>
+          <h1 class="text-2xl font-bold text-gray-900">Healthy Breaks</h1>
+          <p class="text-gray-500 font-medium text-sm">Stay healthy while you work</p>
+        </div>
       </div>
-      <div>
-        <h1 class="text-xl font-bold text-base-content">Healthy Breaks</h1>
-        <p class="text-xs text-base-content/60">Stay healthy while you work</p>
-      </div>
+      <div class="w-full h-px bg-gray-200"></div>
     </div>
-  </header>
 
-  <!-- Main Content -->
-  <main class="p-4 pb-2">
-    <!-- Break Types Grid (2 columns) -->
-    <div id="breaks-list" class="grid grid-cols-2 gap-3">
-      <!-- Breaks will be dynamically inserted here -->
+    <div id="breaks-list" class="space-y-4">
     </div>
+
+    <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 mt-6">
+      <div class="flex justify-between items-center mb-4">
+        <h3 class="font-bold text-lg text-gray-900">Master Override</h3>
+        <span class="text-sm text-gray-500 font-medium">Set all intervals</span>
+      </div>
+
+      <div class="flex gap-3 mb-6">
+        <input type="number" id="master-interval" placeholder="Minutes" min="1" max="180" 
+          class="flex-grow border border-gray-200 bg-white rounded-xl px-4 py-3 text-gray-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-all" />
+        <button id="apply-master" class="bg-[#22C55E] hover:bg-green-600 text-white font-semibold py-3 px-8 rounded-xl transition-colors duration-200 shadow-sm">
+          Apply
+        </button>
+      </div>
+
+      <div class="grid grid-cols-3 gap-3">
+        <button id="reset-all" class="flex items-center justify-center gap-2 border border-gray-200 rounded-xl py-3 text-gray-800 font-semibold hover:bg-gray-50 transition-colors">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"></path>
+            <path d="M3 3v5h5"></path>
+          </svg>
+          Reset
+        </button>
+        <button id="snooze-all" class="flex items-center justify-center gap-2 border border-gray-200 rounded-xl py-3 text-gray-800 font-semibold hover:bg-gray-50 transition-colors">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"></circle>
+            <polyline points="12 6 12 12 16 14"></polyline>
+          </svg>
+          Snooze
+        </button>
+        <button id="pause-all" class="flex items-center justify-center gap-2 border border-gray-200 rounded-xl py-3 text-gray-800 font-semibold hover:bg-gray-50 transition-colors">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <rect x="6" y="4" width="4" height="16"></rect>
+            <rect x="14" y="4" width="4" height="16"></rect>
+          </svg>
+          Pause
+        </button>
+      </div>
+    </div>
+
+    <div class="mt-8 flex justify-center items-center gap-2 text-gray-500 text-sm font-medium">
+      <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" class="text-yellow-500">
+        <path d="M12 2a5 5 0 0 0 -5 5v3a3 3 0 0 0 -3 3v6a3 3 0 0 0 3 3h10a3 3 0 0 0 3 -3v-6a3 3 0 0 0 -3 -3v-3a5 5 0 0 0 -5 -5zm0 2a3 3 0 0 1 3 3v3h-6v-3a3 3 0 0 1 3 -3z"/>
+      </svg>
+      <span>No data leaves your device</span>
+    </div>
+
   </main>
-
-  <!-- Footer -->
-  <footer class="page-footer p-4 pt-6">
-    <!-- Master Override Section -->
-    <div class="card bg-base-100 shadow-sm border border-base-200 mb-3">
-      <div class="card-body p-3">
-        <div class="flex items-center justify-between mb-2">
-          <span class="text-sm font-semibold text-base-content">Master Override</span>
-          <span class="text-xs text-base-content/50">Set all intervals</span>
-        </div>
-        <div class="join w-full">
-          <input 
-            type="number" 
-            id="master-interval" 
-            class="input input-sm input-bordered join-item flex-1" 
-            placeholder="Minutes"
-            min="1"
-            max="180"
-          >
-          <button id="apply-master" class="btn btn-sm btn-primary join-item">Apply</button>
-        </div>
-      </div>
-    </div>
-
-    <!-- Global Controls -->
-    <div class="grid grid-cols-3 gap-2 mt-3 mb-3">
-      <button id="reset-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
-        <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
-        </svg>
-        <span class="text-xs font-medium">Reset</span>
-      </button>
-      <button id="snooze-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
-        <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-        </svg>
-        <span class="text-xs font-medium">Snooze</span>
-      </button>
-      <button id="pause-all" class="btn btn-sm btn-ghost btn-outline flex items-center justify-center gap-1.5 px-3 py-2 h-10">
-        <svg class="w-4 h-4 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 9v6m4-6v6m7-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-        </svg>
-        <span class="text-xs font-medium">Pause</span>
-      </button>
-    </div>
-
-    <!-- Privacy Notice -->
-    <div class="text-center pt-2">
-      <p class="text-xs text-base-content/50 flex items-center justify-center gap-1.5">
-        <svg class="w-4 h-4 text-emerald-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"></path>
-        </svg>
-        No data leaves your device
-      </p>
-    </div>
-  </footer>
 
   <script src="popup.js"></script>
 </body>
