fix: adjust breaks list layout with margin and min-height

--- a/src/popup.html
+++ b/src/popup.html
@@ -122,7 +122,7 @@
     </div>
 
     <!-- Break List -->
-    <div id="breaks-list" class="px-4 flex-1">
+    <div id="breaks-list" class="px-4 mb-4 min-h-[200px]">
       <!-- Break cards will be injected here -->
     </div>
 
