refactor: remove master interval setting from Master Controls
Removed interval input and Apply button from Master Controls section.
'Set all intervals' was not useful since different breaks need
different intervals (Eye: 20min, Water: 60min, etc.).

Kept useful bulk actions:
- Reset All
- Snooze All
- Pause All

Updated tests to match new structure.

All 10 tests passing

--- a/src/popup.html
+++ b/src/popup.html
@@ -130,11 +130,11 @@
     <div class="px-4 mt-6 mb-6">
       <div class="bg-white rounded-2xl shadow-sm border border-gray-100 overflow-hidden">
         <!-- Header -->
-        <div class="p-4 border-b border-gray-100">
+        <div class="p-4">
           <div class="flex items-center justify-between">
             <div>
-              <h2 class="text-sm font-bold text-gray-900">Master Override</h2>
-              <p class="text-sm text-gray-500 font-medium mt-0.5">Set all intervals</p>
+              <h2 class="text-sm font-bold text-gray-900">Master Controls</h2>
+              <p class="text-sm text-gray-500 font-medium mt-0.5">Control all breaks</p>
             </div>
             <div class="p-2 bg-gray-50 rounded-lg">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-gray-600">
@@ -142,27 +142,6 @@
                 <circle cx="12" cy="12" r="3"/>
               </svg>
             </div>
-          </div>
-        </div>
-
-        <!-- Interval Input Row -->
-        <div class="px-4 border-b border-gray-100" style="padding-top: 0px; padding-bottom: 0px;">
-          <div class="flex items-center gap-3">
-            <input 
-              type="number" 
-              id="master-interval" 
-              placeholder="Minutes" 
-              min="1" 
-              max="180"
-              class="flex-1 h-10 border border-gray-200 rounded-lg text-gray-900 font-medium focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent transition-all"
-              style="padding-left: 10px;"
-            >
-            <button 
-              id="apply-master"
-              class="bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-6 rounded-lg transition-colors"
-            >
-              Apply
-            </button>
           </div>
         </div>
 
