style: remove excess margins from break list and master controls
- Removed mb-4 from breaks-list container
- Removed mt-6 from Master Controls section
- Cleaner, more compact layout

All 10 tests passing ✓

--- a/src/popup.html
+++ b/src/popup.html
@@ -122,12 +122,12 @@
     </div>
 
     <!-- Break List -->
-    <div id="breaks-list" class="px-4 mb-4 min-h-[200px]">
+    <div id="breaks-list" class="px-4 min-h-[200px]">
       <!-- Break cards will be injected here -->
     </div>
 
     <!-- Master Override Section -->
-    <div class="px-4 mt-6 mb-6">
+    <div class="px-4 mb-6">
       <div class="bg-white rounded-2xl shadow-sm border border-gray-100 overflow-hidden">
         <!-- Header -->
         <div class="p-4">
