--- a/src/popup.html
+++ b/src/popup.html
@@ -110,10 +110,7 @@
     <!-- Main Header -->
     <div class="px-6 pt-4 pb-4 flex items-center space-x-3">
       <div class="bg-green-500 p-2 rounded-xl shadow-sm flex-shrink-0">
-        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="0" class="text-white">
-          <path d="M7 10v12"/>
-          <path d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z"/>
-        </svg>
+        <img src="icons/icon128.png" width="32" height="32" alt="Healthy Breaks" class="rounded-lg">
       </div>
       <div class="py-2">
         <h1 class="text-lg font-bold text-gray-900 tracking-tight">Healthy Breaks</h1>
